--- a/src/app/about/about.component.html
+++ b/src/app/about/about.component.html
@@ -1,20 +1,24 @@
 <h1
   class="leading-tight tracking-tight font-mont font-black text-left text-8xl"
 >
-  👋, I'm Harshith Ashok
+  👋, Hello people of the
+  <span
+    class="relative after:bg-white after:absolute after:h-1 after:w-5 after:bottom-0 after:left-0 hover:after:w-full after:transition-all after:duration-300 cursor-pointer text-transparent bg-clip-text bg-gradient-to-r from-green-300 to-purple-300"
+    >Internet</span
+  >
+  <span class="text-xl tracking-widest ml-[-15px]">...</span>
 </h1>
-
-<p class="pt-10 max-w-[70%] leading-8">
-  ...passionate programmer who loves crafting digital solutions. I'm skilled in
-  a wide range of technologies, from web development to embedded systems. On the
-  web development front, I'm proficient in both front-end and back-end
-  development. I use languages like JavaScript, HTML, and CSS to create dynamic
-  and visually appealing user interfaces. I've worked with popular frameworks
-  like React, Vue, and Angular to build complex web applications. On the
-  back-end, I've gained experience with Python, Node.js, and frameworks like
+<p class="pt-10 max-w-[70%] leading-8 font-jet">
+  ...I'm a coffee sipping programmer who loves crafting digital solutions. I'm
+  skilled in a wide range of technologies, from web development to embedded
+  systems. On the web development front, I'm proficient in both front-end and
+  back-end development. I use languages like JavaScript, HTML, and CSS to create
+  dynamic and visually appealing user interfaces. I've worked with popular
+  frameworks like React, Vue, and Angular to build complex web applications. On
+  the back-end, I've gained experience with Python, Node.js, and frameworks like
   Django and Express to power server-side logic and data management.
 </p>
-<p class="pt-3 max-w-[70%] leading-8">
+<p class="pt-3 max-w-[70%] leading-8 font-jet">
   When it comes to embedded systems, I've had the opportunity to work with
   micro-controllers like Arduino and Raspberry Pi. I've built a variety of
   projects, from simple automation systems to IoT devices. I've also explored
@@ -22,7 +26,7 @@
   applications.
 </p>
 
-<p class="pt-3 max-w-[70%] leading-8">
+<p class="pt-3 max-w-[70%] leading-8 font-jet">
   Beyond coding, I'm interested in design and user experience. I use tools like
   Figma to create intuitive and visually appealing user interfaces. I'm also
   skilled in video and image editing, using tools like Davinci Resolve and GIMP
@@ -34,23 +38,61 @@
   challenges. I believe that technology has the power to make a positive impact
   on the world, and I'm excited to be a part of it.
 </p>
-
+<div class="flex justify-start">
+  <div class="divider w-32"></div>
+</div>
+<h2 class="h3 font-bold mb-4 text-4xl font-carme">What I use</h2>
+<div class="font-jet pb-5">
+  <p>This Website:</p>
+  <ul class="list-disc px-5 marker:text-blue-300">
+    <li>Angular</li>
+    <li>TailwindCSS</li>
+    <li>Vercel</li>
+    <li>Hugo</li>
+  </ul>
+</div>
+<div class="font-jet">
+  <p>My Setup:</p>
+  <ul class="list-disc px-5 marker:text-blue-300">
+    <li>MacBook Pro(M3 Pro) with 18G unified</li>
+    <li>RPI-3 NAS running Ubuntu Server</li>
+    <li>
+      Intel NUC i5 10<sup>th</sup> Gen 32G with 1+1+1TB HDD DAS running Kubuntu
+    </li>
+    <li>BENQ EX240 165Hz monitor</li>
+    <li>iPhone 12 Pro</li>
+    <li>iPhone 8 - the pics look better :)</li>
+  </ul>
+</div>
 <div class="flex justify-start">
   <div class="divider w-32"></div>
 </div>
 <div class="flex">
   <a
-    class="link hover:text-purple-500 transition-all rounded-md mr-4"
     href="https://github.com/harshith-ashok"
     target="_blank"
+    class="font-jet text-gray-400 hover:text-white"
+    >Github</a
   >
-    GitHub
-  </a>
+  <p class="px-5">/</p>
   <a
-    class="link hover:text-purple-500 transition-all rounded-md mr-4"
-    href="https://in.linkedin.com/harshith_ashok"
+    href="https://reddit.com/u/harshith-ashok"
     target="_blank"
+    class="font-jet text-gray-400 hover:text-white"
+    >Reddit</a
   >
-    LinkedIn
-  </a>
+  <p class="px-5">/</p>
+  <a
+    href="https://linkedin.com/in/harshith-ashok"
+    target="_blank"
+    class="font-jet text-gray-400 hover:text-white"
+    >LinkedIn</a
+  >
+  <p class="px-5">/</p>
+  <a
+    href="https://github.com/harshith-ashok"
+    target="_blank"
+    class="font-jet text-gray-400 hover:text-white"
+    >YouTube</a
+  >
 </div>
