--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,20 +1,71 @@
-<section class="py-24 lg:pb-32 pl-20">
-  <h1 class="leading-tight font-black font-mont text-9xl">
-    I'm Harshith Ashok -<br />a freelance web developer <br />&amp; tech
-    enthusiast based in
-    <span class="transition-all hover:text-blue-950">Chennai, India</span>
+<section class="lg:pt-24 lg:pl-20 overflow-y-hidden">
+  <h1 class="leading-tight font-black font-mont text-5xl lg:text-9xl">
+    I'm
+    <span
+      class="text-transparent bg-clip-text bg-gradient-to-r from-white to-blue-500"
+      >Harshith Ashok</span
+    >
+    <span class="hidden lg:block">
+      web dev,
+      <span
+        class="hover:text-transparent bg-clip-text hover:bg-gradient-to-r hover:from-white hover:to-green-500 hover:transition-all"
+        >Linux</span
+      >
+      geek <br />&amp; Tech enthusiast
+    </span>
   </h1>
-  <div class="max-w-[600px] mt-24">
+  <h2 class="h3 text-gray-400 italic mb-4 text-xl font-jet py-5">
+    I use
+    <span
+      class="tooltip tooltip-bottom underline cursor-pointer"
+      data-tip="fine... its a Mac"
+      >UNIX</span
+    >
+    btw
+  </h2>
+  <div class="flex">
+    <a
+      href="https://github.com/harshith-ashok"
+      target="_blank"
+      class="font-jet text-gray-400 hover:text-white"
+      >Github</a
+    >
+    <p class="px-5">/</p>
+    <a
+      href="https://reddit.com/u/harshith-ashok"
+      target="_blank"
+      class="font-jet text-gray-400 hover:text-white"
+      >Reddit</a
+    >
+    <p class="px-5">/</p>
+    <a
+      href="https://linkedin.com/in/harshith-ashok"
+      target="_blank"
+      class="font-jet text-gray-400 hover:text-white"
+      >LinkedIn</a
+    >
+    <p class="px-5">/</p>
+    <a
+      href="https://github.com/harshith-ashok"
+      target="_blank"
+      class="font-jet text-gray-400 hover:text-white"
+      >YouTube</a
+    >
+  </div>
+
+  <div class="max-w-[600px]">
+    <div class="divider w-32"></div>
     <h2 class="h3 font-bold mb-4 text-4xl font-carme">About Me</h2>
     <div class="font-jet tracking-tight">
       <p>
-        After developing with PHP &amp; JavaScript for over 15 years, it's kind
-        of my bread and butter. I've worked in across a breadth of roles before
-        going freelance full-time in 2018, so I like to believe I have a good
-        understanding of the industry to help you out. Whether that's on a cool
-        project you have or maybe you are an agency looking for an extra set of
-        hands.&nbsp;<br /><br />Want to know a little more about me?
-        <a href="/about" class="text-accent">Go to town.</a>
+        I'm a coffee sipper skilled in web development (JavaScript, HTML, CSS,
+        React, Vue, Angular, Python, Node.js, Django, Express) and embedded
+        systems (Arduino, Raspberry Pi, Nvidia Jetson Nano). I'm also proficient
+        in design tools like Figma, video editing with Davinci Resolve, and
+        image editing with GIMP. I'm a strong advocate for open-source software
+        and Linux, with experience in system administration and DevOps. I'm
+        always eager to learn and contribute to innovative projects.
+        <a href="/about" class="text-blue-400">Go to town.</a>
       </p>
     </div>
   </div>
