--- a/src/app/projects/projects.component.html
+++ b/src/app/projects/projects.component.html
@@ -1,18 +1,25 @@
-<h1 class="leading-tight font-bold text-center text-8xl">Projects</h1>
+<h1
+  class="leading-tight font-black font-mont tracking-wide text-center text-4xl lg:text-8xl"
+>
+  <span
+    class="text-transparent bg-clip-text bg-gradient-to-r from-gray-300 via-blue-300 to-gray-300"
+    >Projects</span
+  >
+</h1>
 <div class="flex justify-center">
   <div class="divider w-32"></div>
 </div>
 <div class="flex justify-center">
-  <p class="text-center text-gray-500">Much more to come!</p>
+  <p class="text-center text-gray-500 italic font-jet">Much more to come!</p>
 </div>
 
 <div class="flex justify-center">
-  <div class="grid grid-cols-1 md:grid-cols-3 gap-10 pt-20">
+  <div class="grid grid-cols-1 lg:grid-cols-3 gap-10 pt-20 font-jet">
     <div
-      class="card border rounded-lg hover:scale-105 transition-all w-96 cursor-pointer hover:shadow-md"
+      class="card border-[0.1px] border-gray-600 rounded-lg hover:scale-105 transition-all lg:w-96 cursor-pointer hover:shadow-md"
     >
       <figure>
-        <p class="flex px-10 pt-10 text-3xl font-bold gap-2">atmos</p>
+        <p class="flex px-10 pt-10 text-3xl font-bold gap-2 font-mont">atmos</p>
       </figure>
       <div class="flex pt-5 justify-center">
         <div>
@@ -43,10 +50,12 @@
       </div>
     </div>
     <div
-      class="card border rounded-lg hover:scale-105 transition-all w-96 cursor-pointer hover:shadow-md"
+      class="card border-[0.1px] border-gray-600 rounded-lg hover:scale-105 transition-all lg:w-96 cursor-pointer hover:shadow-md"
     >
       <figure>
-        <p class="flex px-10 pt-10 text-3xl font-bold gap-2">genetix</p>
+        <p class="flex px-10 pt-10 text-3xl font-bold gap-2 font-mont">
+          genetix
+        </p>
       </figure>
       <div class="flex pt-5 justify-center">
         <div class="">
@@ -68,10 +77,66 @@
       </div>
     </div>
     <div
-      class="card border rounded-lg hover:scale-105 transition-all w-96 cursor-pointer hover:shadow-md"
+      class="card border-[0.1px] border-gray-600 rounded-lg hover:scale-105 transition-all lg:w-96 cursor-pointer hover:shadow-md"
     >
       <figure>
-        <p class="flex px-10 pt-10 text-3xl font-bold gap-2">expense-report</p>
+        <p class="flex px-10 pt-10 text-3xl font-bold gap-2 font-mont">
+          expense-report
+        </p>
+      </figure>
+      <div class="flex pt-5 justify-center">
+        <div class="">
+          <a
+            class="link hover:text-purple-500 transition-all rounded-md mr-4"
+            href="https://github.com/harshith-ashok/expense-report"
+            target="_blank"
+          >
+            GitHub
+          </a>
+        </div>
+      </div>
+      <div class="p-10 min-h-10">
+        <p>
+          Expense Manager is an online application where the user can login to
+          maintain his expenses and incomes. The user should be able to Tracking
+          expenses and incomes by week, month and year as well as by categories
+        </p>
+      </div>
+    </div>
+    <div
+      class="card border-[0.1px] border-gray-600 rounded-lg hover:scale-105 transition-all lg:w-96 cursor-pointer hover:shadow-md"
+    >
+      <figure>
+        <p class="flex px-10 pt-10 text-3xl font-bold gap-2 font-mont">
+          expense-report
+        </p>
+      </figure>
+      <div class="flex pt-5 justify-center">
+        <div class="">
+          <a
+            class="link hover:text-purple-500 transition-all rounded-md mr-4"
+            href="https://github.com/harshith-ashok/expense-report"
+            target="_blank"
+          >
+            GitHub
+          </a>
+        </div>
+      </div>
+      <div class="p-10 min-h-10">
+        <p>
+          Expense Manager is an online application where the user can login to
+          maintain his expenses and incomes. The user should be able to Tracking
+          expenses and incomes by week, month and year as well as by categories
+        </p>
+      </div>
+    </div>
+    <div
+      class="card border-[0.1px] border-gray-600 rounded-lg hover:scale-105 transition-all lg:w-96 cursor-pointer hover:shadow-md"
+    >
+      <figure>
+        <p class="flex px-10 pt-10 text-3xl font-bold gap-2 font-mont">
+          expense-report
+        </p>
       </figure>
       <div class="flex pt-5 justify-center">
         <div class="">
