--- a/src/app/projects/projects.component.html
+++ b/src/app/projects/projects.component.html
@@ -34,7 +34,7 @@
         <div>
           <a
             class="link hover:text-accent transition-all rounded-md mr-4"
-            href="https://github.com/harshith-ashok/atmos"
+            href="https://atmos-ashen.vercel.app"
             target="_blank"
           >
             Live
@@ -108,7 +108,7 @@
     >
       <figure>
         <p class="flex px-10 pt-10 text-3xl font-bold gap-2 font-mont">
-          expense-report
+          distro-hopp
         </p>
       </figure>
       <div class="flex pt-5 justify-center">
@@ -124,9 +124,9 @@
       </div>
       <div class="p-10 min-h-10">
         <p>
-          Expense Manager is an online application where the user can login to
-          maintain his expenses and incomes. The user should be able to Tracking
-          expenses and incomes by week, month and year as well as by categories
+          Helps you choose a Linux distro by making you answer a few questions.
+          It selects based on the use case, stability, packages and a lot more
+          factors specific to specific use cases.
         </p>
       </div>
     </div>
